--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
                         <!--Slide One-->
                         <div class="carousel-item active" id="carousel-img-1">
                             <img src="assets/images/carousel1.jpg" alt="First Slide" class="d-block w-100 container-fluid">
+                            <div class="carousel-caption animated fadeInUp d-block d-md-none">
+                                <h5>New Album</h5>
+                                <h6>In the end</h6>
+                                <div class="dropdown">
+                                    <button class="buy-btn btn btn-dark btn-sm dropdown-toggle" data-toggle="dropdown">
+                                    Buy Now
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="https://www.amazon.com/End-Deluxe-Cranberries/dp/B07MM5X2ZJ" target="_blank">Amazon</a>
+                                        <a class="dropdown-item" href="https://music.apple.com/ca/album/in-the-end/1448776585" target="_blank">iTunes</a>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="carousel-caption animated fadeInUp d-none d-md-block">
                                 <h3>New Album</h3>
                                 <h2>In the end</h2>
@@ -84,16 +97,33 @@
                         <!--Slide Two-->
                         <div class="carousel-item" id="carousel-img-2">
                             <img src="assets/images/carousel2.png" alt="Second Slide" class="d-block w-100 container-fluid">
+                            <div class="carousel-caption animated fadeInUp d-block d-md-none">
+                                <h5>Summer Sale</h5>
+                                <div class="dropdown">
+                                    <a href="https://thecranberries.shopfirebrand.com/" class="buy-btn btn btn-dark btn-sm merch-btn" target="_blank"><i class="fa fa-shopping-basket" aria-hidden="true"></i> Merch Store</a>
+                                </div>
+                            </div>
                             <div class="carousel-caption animated fadeInUp d-none d-md-block">
                                 <h2>Summer Sale</h2>
                                 <div class="dropdown">
-                                    <a href="https://thecranberries.shopfirebrand.com/" class="buy-btn btn btn-dark btn-lg visit-btn" target="_blank"><i class="fa fa-shopping-basket" aria-hidden="true"></i> Merch Store</a>
+                                    <a href="https://thecranberries.shopfirebrand.com/" class="buy-btn btn btn-dark btn-lg merch-btn" target="_blank"><i class="fa fa-shopping-basket" aria-hidden="true"></i> Merch Store</a>
                                 </div>
                             </div>
                         </div>
                         <!--Slide Three-->
                         <div class="carousel-item" id="carousel-img-3">
                             <img src="assets/images/carousel3.jpg" alt="Third Slide" class="d-block w-100 container-fluid">
+                            <div class="carousel-caption animated fadeInUp d-block d-md-none">
+                                <h5>New Video</h5>
+                                <h6>All Over Now</h6>
+                                <div class="jump-to-video-btn hvr-hang">
+                                    <a href="#video">
+                                    <button class="btn down-btn">
+                                    <i class="fas fa-chevron-down"></i>
+                                    </button>
+                                    </a>
+                                </div>
+                            </div>
                             <div class="carousel-caption animated fadeInUp d-none d-md-block">
                                 <h3>New Video</h3>
                                 <h2>All Over Now</h2>
