Changed carousel caption sizing on smaller screens

--- a/index.html
+++ b/index.html
@@ -70,15 +70,8 @@
                                 <img src="assets/images/carousel1.jpg" alt="First Slide" class="d-block w-100 container-fluid">
                                 <div class="carousel-caption animated fadeInUp d-block d-md-none">
                                     <h5>New Album</h5>
-                                    <h6>In the end</h6>
                                     <div class="dropdown">
-                                        <button class="buy-btn btn btn-dark btn-sm dropdown-toggle" data-toggle="dropdown">
-                                        Buy Now
-                                    </button>
-                                        <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="https://www.amazon.com/End-Deluxe-Cranberries/dp/B07MM5X2ZJ" target="_blank">Amazon</a>
-                                            <a class="dropdown-item" href="https://music.apple.com/ca/album/in-the-end/1448776585" target="_blank">iTunes</a>
-                                        </div>
+                                        <a href="https://www.amazon.com/End-Deluxe-Cranberries/dp/B07MM5X2ZJ" class="btn btn-dark btn-sm merch-btn" target="_blank"> Buy Now</a>
                                     </div>
                                 </div>
                                 <div class="carousel-caption animated fadeInUp d-none d-md-block">
@@ -101,7 +94,7 @@
                                 <div class="carousel-caption animated fadeInUp d-block d-md-none">
                                     <h5>Summer Sale</h5>
                                     <div class="dropdown">
-                                        <a href="https://thecranberries.shopfirebrand.com/" class="buy-btn btn btn-dark btn-sm merch-btn" target="_blank"><i class="fa fa-shopping-basket" aria-hidden="true"></i> Merch Store</a>
+                                        <a href="https://thecranberries.shopfirebrand.com/" class="btn btn-dark btn-sm merch-btn" target="_blank"><i class="fa fa-shopping-basket" aria-hidden="true"></i> Merch Store</a>
                                     </div>
                                 </div>
                                 <div class="carousel-caption animated fadeInUp d-none d-md-block">
@@ -116,7 +109,6 @@
                                 <img src="assets/images/carousel3.jpg" alt="Third Slide" class="d-block w-100 container-fluid">
                                 <div class="carousel-caption animated fadeInUp d-block d-md-none">
                                     <h5>New Video</h5>
-                                    <h6>All Over Now</h6>
                                     <div class="jump-to-video-btn hvr-hang">
                                         <a href="#video">
                                     <button class="btn down-btn">
@@ -128,9 +120,9 @@
                                 <div class="carousel-caption animated fadeInUp d-none d-md-block">
                                     <h3 class="slide-caption-sm">New Video</h3>
                                     <h2 class="slide-caption-lg">All Over Now</h2>
-                                    <div class="jump-to-video-btn hvr-hang">
+                                    <div class="jump-to-video-btn-lg hvr-hang">
                                         <a href="#video">
-                                    <button class="btn down-btn">
+                                    <button class="btn down-btn-lg">
                                         <i class="fas fa-chevron-down"></i>
                                     </button>
                                     </a>
