Removal of unnecessary HTML

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                         <div class="row">
                             <div class="form-group col-sm date-select">
                                 <label for="formEmail">Date Select</label>
-                                <input type="date" class="form-control" id="formDate" placeholder="01/01/2019" required>
+                                <input type="date" class="form-control" id="formDate" required>
                             </div>
                             <div class="form-group col-sm venue-size">
                                 <label for="venueSize">Venue Size</label>
